fixed layout of pages so short pages would stretch to screen

--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
+
 html, body {
-    height: 100%;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 body {
     padding-top: 51px;
 }
 .container-fluid {
-    min-height: 100%;
-    display: block;
+    min-height: calc(100% - 51px);
+}
+.text-center {
+    display: flex;
+    padding: 0px;
 }
 footer {
     height: 51px;
@@ -53,6 +57,8 @@ header {
 }
 .btn-primary {
     background-color: #144b6f;
+}
+.btn {
     font-size: 18px;
 }
 @media screen and (max-device-width: 800px) {
@@ -100,7 +106,6 @@ h2,h3,h4 {
     border-top: none;
     border-bottom: none;
     border-color: #080808;
-    display: block;
     min-height: 100%;
     padding-bottom: 20px;
 }
@@ -126,7 +131,9 @@ h2,h3,h4 {
     background: linear-gradient(rgba(20,75,111,1),rgba(58,130,143,0.8));
     min-height: 100%;
     overflow: auto;
-    display: block;
+    align-items: stretch;
+    width: 100%;
+    margin: 0px;
 }
 .mandatory {
     color: red;
